# artificial_life

src/: SupportTypes.h  World.cpp  World.h  test.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_alife  test_alife.cpp  test_runner.h  test_world.h
